# webcam-games

./: .gitignore  CMakeLists.txt  CvGames  LICENSE  Makefile  README  README.md  TrackerPsiaudo.h  main.cpp
Data/: m1.mtl  m2.mtl  m3.mtl  untitled.mtl  v02-sad.mtl
Objects3D/: Material.cpp  Object3D.cpp  Objects3D.cpp  Objects3D.h
Output/: Bubble.cpp  Bubble.h  BubbleShot.cpp  BubbleShot.h  Output3D.cpp  Output3D.h  WebCamEffect.cpp  WebCamEffect.h  WebCamVJ.cpp  WebCamVJ.h
Tracker/: TrackerBackGround.cpp  TrackerBackGround.h  TrackerBase.cpp  TrackerBase.h  TrackerColor.cpp  TrackerColor.h  TrackerDifference.cpp  TrackerDifference.h  TrackerMotion.cpp  TrackerMotion.h  TrackerRed.cpp  TrackerRed.h
src/: main.cpp
src/Helpers/: cli.cpp  cli.h
src/Objects3D/: Objects3D.cpp
src/Output/: Bubble.cpp  Bubble.h  BubbleShot.cpp  BubbleShot.h  DebugView.cpp  DebugView.h  Output3D.cpp  Output3D.h  WebCamEffect.cpp  WebCamEffect.h  WebCamVJ.cpp  WebCamVJ.h
src/Tracker/: TrackerBase.cpp  TrackerBase.h  TrackerDifference.cpp  TrackerDifference.h  TrackerMotion.cpp  TrackerMotion.h
